--- a/css/app.css
+++ b/css/app.css
@@ -3,6 +3,7 @@
   --text-color-alternate: grey;
   --background-color: rgb(248, 248, 248);
   --background-color-light: lightgrey;
+  --color-error: darkred;
   --color-warning: darkorange;
   --color-valid: green;
   --padding: 1vmin;
@@ -36,6 +37,7 @@ h1, p, pre {
 pre {
   max-width: 100%;
   font-size: .75rem;
+  color: var(--color-error);
 }
 
 p {
