--- a/css/app.css
+++ b/css/app.css
@@ -25,6 +25,10 @@ header {
   color: var(--text-color-alternate);
 }
 
+#demo {
+  color: var(--color-warning);
+}
+
 header, section {
   overflow: hidden;
 }
