--- a/src/css/app.css
+++ b/src/css/app.css
@@ -21,7 +21,7 @@ header {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: left;
+  justify-content: space-between;
   color: var(--text-color-alternate);
 }
 
